[package]
name = "peak-util"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Gubbin <cgubbin@sensoriumtl.com>"]


[dependencies]
errorfunctions = "0.2"
nalgebra = "0.32"
ndarray = "0.15"
num-traits = "0.2"
quad-rs = { git = "https://github.com/cgubbin/quad-rs.git", branch = "trellis" }

[dev-dependencies]
approx = "0.5"
rand = "0.8"
rand_isaac = "0.3"
